--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-OK, đã cập nhật toàn bộ file HTML và JavaScript. Bạn chỉ cần sao chép và dán toàn bộ đoạn mã này để áp dụng hiệu ứng logo mới.
+HÙNG CHÚC BẠN MAY MẮN NHA.
 
-Tôi đã chỉnh sửa phần CSS của `.title` để tạo hiệu ứng nổi 3D trắng-đen cho logo "KIEU TUAN HUNG", làm nó nổi bật và ấn tượng hơn.
+
 
 ```html
 <!doctype html>
